2006-10-01  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (user): Add some form handling for the
	show_feed_contents form.
	(newfunc): Simplistic decorator to trap exceptions and convert
	them to error messages.
	(show_feed_contents): Start a view to show the items in a feed
	submitted by the user.

	* urls.py (urlpatterns): Add show_feed_contents before the generic
	user home page view.  Make the regex for username more strict.

	* templates/user.html: Add a form and some javascript to show the
	contents of a feed if the user enters a URL.

2006-09-30  Doug Hellmann  <dhellmann@racemi.com>

	* templates/user.html: Add classes to the parts of the queue listing.

	* templates/index.html: Switch to 2 columns.

	* templates/three_columns.html: Move global template into this app.

	* urls.py (feeds): Add rss feed info and update class for atom feeds.

	* templates/user.html: Add links for atom and rss feeds.

	* feeds.py (UserFeed): Add title and description templates.
	(UserFeed.title): Tweak formatting of feed title.
	(AtomFeed): New class to produce an ATOM feed, since we will
	support multiple formats.
	(UserFeed.items): New class to produce the RSS feed.

	* templates/feed_title.html: New template to show the title of a
	queue item in a feed.

	* templates/feed_description.html: New template to show the
	description of a queue item in a feed.

	* views.py (user): Sort by add_date order, not reversed.

	* templates/user.html: Use user instead of user.username.

	* views.py (user_redirect): Rename login_redirect.  Add a
	urlBase argument.

	* urls.py (urlpatterns): Add a URL pattern for when the input URL
	does not include the user name.

	* views.py (user_redirect): Allow callers to specify where the
	cast URL should go.

	* urls.py (urlpatterns): Remove project name from pattern prefix.

	* views.py: Update the template references so they match now that
	they are in the app templates directory.
